--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -50,7 +50,7 @@
               Score<% if @game_week.in_play? %> (live)<% end %>
             </td>
             <td class="mdl-data-table__cell--non-numeric normal-text">
-              <%= @game.get_score %><% if @game_week.in_play? %> (<%= @game.get_live_score %>)<% end %>
+              <%= @game.get_score %><% if @game_week.in_play? %> (<%= @game.present_live_score %>)<% end %>
             </td>
           </tr>
         </table>
