--- a/app/views/contracts/new.html.erb
+++ b/app/views/contracts/new.html.erb
@@ -1,4 +1,5 @@
 <% player = Player.find(params[:player_id].to_i)%>
+<% league = League.find(params[:league_id].to_i)%>
 
 <div class="col-sm-12">
   <div class="demo-card-wide mdl-card mdl-shadow--2dp">
@@ -8,6 +9,6 @@
 			</h2>
 		</div>
 		<%= render partial: 'form', locals: { league: @league, team: @team, player: player } %>
-		<%= render partial: 'shared/player_game_week_table', locals: {player: player} %>
+		<%= render partial: 'shared/player_game_week_table', locals: {player: player, league: league} %>
 	</div>
 </div>
