--- a/app/views/shared/team_players/_other_team_display.html.erb
+++ b/app/views/shared/team_players/_other_team_display.html.erb
@@ -1,4 +1,5 @@
 <% @league = League.find(params[:league_id].to_i) %>
+<% @star_players = @team.get_star_team_players %>
 <div class="col-sm-12">
 	<% if @team.team_players.count > 0 %>
 		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
@@ -18,7 +19,7 @@
 					<% @team.team_players.includes(:player).sort_by{ |tp| [tp.player.sort_val, tp.player.last_name, tp.player.first_name] }.each do |team_player| %>
 						<tr id="<%= dom_id(team_player) %>">
 							<td class="mdl-data-table__cell--non-numeric normal-text <%= 'highlight_warning' unless team_player.player.news.blank? %>">
-								<%= SquadPosition.long_name_to_short_name(team_player.player.playing_position) %> 
+								<%= team_player.display_squad_position(true) %> <% if team_player.is_star_team_player(@star_players) %><i class="material-icons small">star_border</i><% end %>
 							</td>
 							<td class="mdl-data-table__cell--non-numeric normal-text">
 								<%= link_to team_player.full_name(true, 14), league_player_path(@league.id, team_player.player.id), class: "content-link" %>
