--- a/app/views/team_players/show.html.erb
+++ b/app/views/team_players/show.html.erb
@@ -74,7 +74,7 @@
 			</div>
 		</div>
 		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-			<%= render partial: 'shared/player_game_week_table', locals: {player: @team_player.player} %>
+			<%= render partial: 'shared/player_game_week_table', locals: {player: @team_player.player, league: @team.league} %>
 		</div>
 	</div>
 </div>
