Add photos and update viewport

--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -17,10 +17,7 @@
 		    	<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
 		    		<tr>
 							<th class="mdl-data-table__cell--non-numeric">
-								<span>P</span>
-							</th>
-							<th class="mdl-data-table__cell--non-numeric">
-								<span>Tm</span>
+								<span>Pos</span>
 							</th>
 							<th class="mdl-data-table__cell--non-numeric">
 								<span>Name</span>
