--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,7 +6,7 @@
 	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 		<link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.light_green-deep_orange.min.css" />
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css"> 
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" type="text/css">
 		<link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
 	  <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
 	  <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
@@ -24,6 +24,7 @@
 	  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 	  <meta name="theme-color" content="#ffffff">
 	  <meta name="google-site-verification" content="cwD2D6IAAsoT8qu5s9IbqFmV4qATH0PpXC6SRku1IcQ" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 	  <%= csrf_meta_tags %>
 	</head>
@@ -47,7 +48,7 @@
 			</div>
 			<div class="row">
 				<%= yield %>
-			</div>	
+			</div>
 		</div>
 	</body>
 </html>
