--- a/app/views/shared/_player.html.erb
+++ b/app/views/shared/_player.html.erb
@@ -7,7 +7,7 @@
 	<% if owned_by_current_user %>
 		<% player_object_status = "Owned by you" %>
 	<% else %>
-		<% player_object_status = "Owned by #{truncate(team_player.team.title, length: 10)}" %>
+		<% player_object_status = "#{truncate(team_player.team.title, length: 15, escape: false)}" %>
 	<% end %>
 <% else %>
 	<% player_object = player %>
@@ -15,26 +15,23 @@
 	<% if num_of_contract_offers > 0 %>
 		<% player_object_status = "#{num_of_contract_offers} contract #{'offer'.pluralize(num_of_contract_offers)}" %>
 	<% else %>
-		<% player_object_status = "No contract offers" %>
+		<% player_object_status = "Free agent" %>
 	<% end %>
 <% end %>
 
 <!-- Position -->
 <td class="mdl-data-table__cell--non-numeric normal-text <%= 'highlight_warning' unless player_object.news.blank? %>">
-	<%= SquadPosition.long_name_to_short_name(player_object.playing_position) %>
-</td>
-
-<!-- Real team -->
-<td class="mdl-data-table__cell--non-numeric normal-text">
-	<%= player_object.real_team_short_name %>
+	<%= SquadPosition.long_name_to_short_name(player_object.playing_position) %> / <%= player_object.real_team_short_name %>
 </td>
 
 <!-- Player name with link to action -->
 <td class="mdl-data-table__cell--non-numeric normal-text">
 	<% if !owned_by_current_user %>
-		<%= link_to player_object.full_name(true, 14), league_player_path(league.id, player_object.id), class: "content-link" %>
+		<%= render partial: 'shared/players/player_image', locals: {player: player_object} %>
+		<%= link_to player_object.full_name(true, 13), league_player_path(league.id, player_object.id), class: "content-link" %>
 	<% else %>
-		<%= link_to player_object.full_name(true, 14), league_team_team_player_path(league.id, team_player.team.id, team_player.id), class: "content-link" %>
+		<%= render partial: 'shared/players/player_image', locals: {player: team_player.player} %>
+		<%= link_to player_object.full_name(true, 13), league_team_team_player_path(league.id, team_player.team.id, team_player.id), class: "content-link" %>
 	<% end %>
 </td>
 
@@ -71,7 +68,6 @@
 		<%= player_object_status %>
 	</td>
 	<td class="mdl-data-table__cell--non-numeric normal-text">
-			
+
 	</td>
 <% end %>
-
