--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,11 +20,11 @@
 	  <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
 	  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
 	  <link rel="manifest" href="/manifest.json">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	  <meta name="msapplication-TileColor" content="#da532c">
 	  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 	  <meta name="theme-color" content="#ffffff">
 	  <meta name="google-site-verification" content="cwD2D6IAAsoT8qu5s9IbqFmV4qATH0PpXC6SRku1IcQ" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 	  <%= csrf_meta_tags %>
 	</head>
