Test speed on game issue

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,6 @@
 <html>
 	<head>
 	  <title>Gaffer</title>
-		
 	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
 	  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -25,6 +24,7 @@
 	  <meta name="msapplication-TileImage" content="/mstile-144x144.png">
 	  <meta name="theme-color" content="#ffffff">
 	  <meta name="google-site-verification" content="cwD2D6IAAsoT8qu5s9IbqFmV4qATH0PpXC6SRku1IcQ" />
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
 		<script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
 	  <%= csrf_meta_tags %>
 
