--- a/app/views/shared/games/_team_lineup_table.html.erb
+++ b/app/views/shared/games/_team_lineup_table.html.erb
@@ -19,10 +19,10 @@
     <% selected_team_players = game.get_team_lineup_including_yet_to_play(team) %>
 	  <% selected_team_players.each do |game_player| %>
 	    <% if game_player.player_game_weeks.joins(:player_lineups).where('player_game_weeks.game_week_id = ?', game_week.id).count == 0 %>
-	      <%= render partial: "shared/games/player_lineup_yet_to_play_row", locals: {yet_to_play_team_player: game_player} %>
+	      <!-- <%= render partial: "shared/games/player_lineup_yet_to_play_row", locals: {yet_to_play_team_player: game_player} %> -->
 	    <% else %>
 	      <% player_lineup = team_lineups.joins(:player_game_week).where('player_game_weeks.game_week_id = ? AND player_game_weeks.player_id = ?', game_week.id, game_player.id).first %>
-	      <%= render partial: "shared/games/player_lineup_table_row", locals: {player_lineup: player_lineup} %>
+	      <!-- <%= render partial: "shared/games/player_lineup_table_row", locals: {player_lineup: player_lineup} %> -->
 	    <% end %>
 	  <% end %>
 
@@ -55,6 +55,6 @@
       </tr>
     <% end %>
 
-	  <%= render partial: "shared/games/summary_row", locals: {player_lineups: team_lineups} %>
+	  <!-- <%= render partial: "shared/games/summary_row", locals: {player_lineups: team_lineups} %> -->
 	</table>
 </div>
