--- a/app/views/shared/games/_team_lineup_table.html.erb
+++ b/app/views/shared/games/_team_lineup_table.html.erb
@@ -55,6 +55,6 @@
       </tr>
     <% end %>
 
-	  
+	  <%= render partial: "shared/games/summary_row", locals: {player_lineups: team_lineups} %>
 	</table>
 </div>
