--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,8 +16,22 @@ a.mdl-button {
 	padding-top: 16px;
 	width: 45%;
 }
+a.forgot-password {
+	color: #ffffff;
+}
 body#body_id {
 	font-family: "Roboto";
+}
+div.flash-div{
+	align-items: center;
+	display: flex;
+	margin: 0px;
+  position: absolute;
+  width: 100%;
+}
+div.main-nav-item{
+	padding-left: 0px;
+	text-align: center;
 }
 div.mdl-card__actions {
 	padding: 12px;
@@ -27,6 +41,16 @@ div.mdl-card__supporting-text {
 	line-height: 35px;
 	width: 100%;
 }
+div.mdl-shadow--2dp{
+	box-shadow: none;
+}
+div.mdl-textfield{
+	padding: 14px 0px;
+}
+div.mdl-textfield--floating-label.is-focused .mdl-textfield__label, div.mdl-textfield--floating-label.is-dirty .mdl-textfield__label{
+	color: #333;
+	font-size: 24px;
+}
 form, form div, .form-group div.mdl-textfield{
 	width: 100%;
 }
@@ -35,7 +59,7 @@ i.ghost {
 }
 i.large {
 	font-size: 48px;
-	margin-right: 5px;
+	margin-right: 15px;
 }
 i.team-icons {
 	font-size: 26px;
@@ -69,12 +93,15 @@ input[type="submit"].content-link {
   text-decoration: none;
 }
 input.mdl-textfield__input {
-	border-bottom: 5px solid rgba(5,5,5,.12);
+	border-bottom: 3px solid #666;
 }
 label.mdl-textfield__label {
 	font-size: 34px;
 	padding-top: 3px;
 	top: 51px;
+}
+label.mdl-textfield__label:after{
+	background-color: rgba(0,0,0,0);
 }
 li {
 	font-size: 24px;
@@ -132,12 +159,30 @@ td.transfer-item-cell {
 #player_position_dropdown {
 	cursor: pointer;
 }
+#log-in-button, #sign-up-button{
+	background: #ffffff;
+	float: right;
+	letter-spacing: 3px;
+}
 #logo-row {
-  background: #ff6e40;
+	align-items: center;
+	background-color: #e1e1e1;
+	display: flex;
+}
+#home-hero-row, #log-in-hero-row {
+	align-items: center;
+	background: url(home-background.jpg) no-repeat left center;
+  background-size: 100% auto;
+	display: flex;
+  padding-top: 44px;
+  min-height: 500px;
 }
 #main-nav {
 	font-size: 23px;
 	text-align: center;
+}
+#new-user-form-div{
+	margin-top: 40px;
 }
 #search_form_switch_div{
   float: left;
@@ -155,15 +200,12 @@ td.transfer-item-cell {
 	min-width: 900px;
 }
 .alert {
-	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.14), 0 5px 3px -2px rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.12);
+	//box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.14), 0 5px 3px -2px rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.12);
   font-size: 30px;
   line-height: 35px;
 }
 .alert_sub_div {
-	margin: 0px 0px 4px 0px;
-	padding-left: 54px;
-  text-align: left;
-  text-indent: -28px;
+	text-align: center;
 }
 .bold-row {
 	border-top: 2px solid #999;
@@ -180,6 +222,12 @@ td.transfer-item-cell {
   text-align: left;
   vertical-align: bottom;
   width: 37%;
+}
+.col-sm-12 .mdl-textfield--floating-label.is-dirty .mdl-textfield__label{
+	color: #fff;
+  font-size: 20px;
+  top: 4px;
+  visibility: visible;
 }
 .collection_radio_buttons {
 	margin: 15px 0px;
@@ -205,11 +253,12 @@ td.transfer-item-cell {
 	display: none;
 }
 .container {
-	margin: 25px 0px;
-	width: 900px;
+	// margin: 25px 0px;
+	// width: 900px;
 }
 .demo-card-wide.mdl-card {
-  margin: 0px 0px 30px 0px;
+	margin: 96px 0px 30px 0px;
+  padding: 0px 20px 10px 40px;
   width: 100%;
 }
 .green-circle {
@@ -224,8 +273,32 @@ td.transfer-item-cell {
 .hidden_div {
 	display: none;
 }
+div.home-page-align-columns{
+	align-items: center;
+	display: flex;
+	margin-right: 0px;
+	padding-top: 45px;
+}
+.home-page-cta{
+	align-items: center;
+	display: flex;
+}
+.home-page-cta a.mdl-button{
+	background: #ffffff;
+	margin: 20px 0px;
+	width: 80%;
+}
+.home-page-cta img{
+	border-radius: 15px;
+	box-shadow: 10px 10px 15px 5px #e1e1e1;
+	margin: 0 auto;
+	width: 70%;
+}
+.home-page-hero-img{
+	height: auto;
+	width: 100%;
+}
 .home-page-row {
-  border-bottom: 3px solid rgb(139,195,74);
   padding: 30px 0px;
 }
 .home-page-row-closing-remark{
@@ -235,19 +308,25 @@ td.transfer-item-cell {
   padding: 25px 0px 0px 0px;
 }
 .home-page-row-content{
-  font-size: 32px;
-  line-height: 43px;
-  padding: 20px 0px;
-  text-align: center;
-  width: 100%;
+	background-color: rgba(255, 255, 255, 0.7);
+	color: #464646;
+	font-size: 22px;
+	font-weight: 400;
+  line-height: 32px;
+  padding: 15px;
+	margin: 10px;
+  text-align: justify;
+	text-transform: uppercase;
 }
 .home-page-row-header{
-  color: rgb(139,195,74);
+  color: #464646;
   font-size: 40px;
-  font-weight: 100;
+  font-weight: 800;
   letter-spacing: 3px;
-  padding: 20px 0px;
-  text-align: center;
+	line-height: 100%;
+  padding: 20px 20px;
+  text-align: left;
+	text-transform: uppercase;
   width: 100%;
 }
 .horizontal-style, .horizontal-style-tabs, .horizontal-style-centre-form {
@@ -290,23 +369,34 @@ td.transfer-item-cell {
 .log-in-form{
   padding-left: 55px;
 }
-.log-in-form-fields-div {
+.log-in-form-fields-div, .sign-up-form-fields-div {
   float: left;
   margin: 0px;
   padding: 5px;
   width: 50%;
 }
-.log-in-form-buttons-div {
+.log-in-form-buttons-div, .sign-up-form-buttons-div {
   float: right;
   padding: 0px 5px;
   width: 50%;
 }
+.logged-out-row{
+	padding: 0px 15px;
+}
 .logo-image {
   display: block;
-  margin-left: auto;
+  margin-left: 5%;
   margin-right: auto;
-  padding: 10px 0px;
-	width: 45%;
+  padding: 30px 0px;
+	width: 30%;
+}
+.main-nav-item-logged_out, .main-nav-item-logged_in{
+	color: rgb(70, 70, 70);
+	font-size: 22px;
+	letter-spacing: 3px;
+}
+.main-nav-item-logged_out:hover, .main-nav-item-logged_in:hover{
+	color: rgb(0, 0, 0);
 }
 .material-icons.error {
 	color: #ff6e40;
@@ -408,9 +498,23 @@ td.transfer-item-cell {
 	outline: none;
 	text-decoration: underline;
 }
+.light-background-form{
+	background-color: rgba(255,255,255,0.5);
+  margin-bottom: 4px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
 .highlight_warning {
   color: #ff6e40;
   font-weight: bold;
+}
+.row .flash{
+	background-color: #fff;
+	border: 2px solid #ccc;
+	border-radius: 7px;
+	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.14), 0 5px 3px -2px rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.12);
+	margin: 12px;
+	padding: 10px;
 }
 .selected-tab, .selected-tab:active, .selected-tab:hover, .selected-tab:visited {
 	border: 1px solid #888;
@@ -420,6 +524,9 @@ td.transfer-item-cell {
 }
 .show_div {
 	display: block;
+}
+.sign-up-form-buttons-div .cancel_link_anchor{
+	color: #fff;
 }
 .white-circle {
 	background: #ffffff;
@@ -494,9 +601,6 @@ select
 }
 .col-sm-12 h4 {
 	font-size: 30px;
-}
-.col-sm-12 .demo-card-wide.mdl-card.mdl-shadow--2dp {
-	box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.14), 0 5px 3px -2px rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.12);
 }
 .col-sm-12 .mdl-textfield--floating-label.is-focused .mdl-textfield__label, .col-sm-12 .mdl-textfield--floating-label.is-dirty .mdl-textfield__label, .col-sm-12 .mdl-textfield--floating-label.has-placeholder .mdl-textfield__label, .mdl-checkbox__label {
 	font-size: 26px;
