--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,27 +1,12 @@
 <%= form_for(@user) do |f| %>
-  <% if @user.errors.any? %>
-    <div class="mdl-card__supporting-text">
-      Please address the <%= "error".pluralize(@user.errors.count) %> and try again:
-    </div>
-    <div>
-      <ul>
-        <% @user.errors.full_messages.each do |message| %>
-          <li>
-            <i class="material-icons large error">face</i>
-            <%= message %>
-          </li>
-       <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="mdl-card__actions">
-    <div class="form-group">
+  <div class="row light-background-form">
+    <div class="form-group sign-up-form-fields-div">
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <%= f.text_field :first_name, class: "mdl-textfield__input" %>
         <%= f.label :first_name, "First Name", class: "mdl-textfield__label" %>
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group sign-up-form-fields-div">
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <%= f.text_field :last_name, class: "mdl-textfield__input" %>
         <%= f.label :last_name, "Last Name", class: "mdl-textfield__label" %>
@@ -33,20 +18,20 @@
         <%= f.label :email, class: "mdl-textfield__label" %>
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group sign-up-form-fields-div">
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <%= f.password_field :password, id: 'signup_password', class: "mdl-textfield__input" %>
         <%= f.label :password, class: "mdl-textfield__label", for: "signup_password" %>
       </div>
     </div>
-    <div class="form-group">
+    <div class="form-group sign-up-form-fields-div">
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <%= f.password_field :password_confirmation, class: "mdl-textfield__input" %>
         <%= f.label :password_confirmation, "Password (again)", class: "mdl-textfield__label" %>
       </div>
     </div>
-    <div class="form-group">
-      <%= f.submit "Sign Up", class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
+    <div class="form-group sign-up-form-buttons-div">
+      <%= f.submit "Sign Up", id: "sign-up-button", class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
       <%= link_to "Cancel", root_path, class: "cancel_link_anchor" %>
     </div>
   </div>
