--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,8 +1,13 @@
-<div class="col-sm-12">
-  <div class="demo-card-wide mdl-card mdl-shadow--2dp">
-		<div class="mdl-card__title">
-			<h2 class="mdl-card__title-text">Sign up</h2>
-		</div>
-			<%= render 'form' %>
-	</div>
+<div id="log-in-hero-row" class="row">
+  <div class="col-sm-1">
+    <!-- Empty -->
+  </div>
+  <div id="new-user-form-div" class="col-sm-10">
+    <% if controller_name == "users" %>
+      <%= render 'form' %>
+    <% end %>
+  </div>
+  <div class="col-sm-1">
+    <!-- Empty -->
+  </div>
 </div>
