Add Google ad conversion tracking

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,8 @@
+<!-- Event snippet for Visits home page 2019.04.16 conversion page -->
+<script>
+  gtag('event', 'conversion', {'send_to': 'AW-749815027/_vEnCK-8sZkBEPOJxeUC'});
+</script>
+
 <div id="log-in-hero-row" class="row">
   <div class="col-sm-1">
     <!-- Empty -->
