--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -3,11 +3,6 @@
 <div class="row">
 	<div class="col-sm-12">
 		<div class="demo-card-wide mdl-card mdl-shadow--2dp">
-			<div class="mdl-card__title">
-	      <h2 class="mdl-card__title-text">
-	      	<%= link_to @league.name, league_path(@league), class: 'content-link' %>&nbsp;players
-	      </h2>
-	    </div>
 
 	    <%= render partial: 'search_form', locals: {league: @league} %>
 
@@ -29,7 +24,7 @@
 
 							</th>
 						</tr>
-						<% players_array = @players.sort_by{ |player| [player.sort_val, player.real_team_short_name, player.last_name, player.first_name] }.paginate(page: params[:page], per_page: [((@players.count / 5).ceil + 1), 50].max) %>
+						<% players_array = @players.sort_by{ |player| [player.player_value, player.real_team_short_name, player.last_name, player.first_name] }.reverse!.paginate(page: params[:page], per_page: [((@players.count / 5).ceil + 1), 50].max) %>
 						<% players_array.each do |player| %>
 							<tr>
 								<%= render partial: 'shared/player', locals: {player: player, team_players: team_players, league: @league} %>
