--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -3,7 +3,7 @@
   <div class="demo-card-wide mdl-card mdl-shadow--2dp">
 		<div class="mdl-card__title">
 			<h2 class="mdl-card__title-text">
-        <span>Create team</span>
+        <span>Name your team & stadium</span>
 			</h2>
 		</div>
 			<%= render 'form' %>
