--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -26,14 +26,14 @@
     <div class="form-group">
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <%= f.text_field :weekly_salary_cents, value: (f.object.new_record? ? 25000 : @contract.weekly_salary_cents), pattern: "^[1-9]{1}[0-9]*$", class: "mdl-textfield__input" %>
-        <%= f.label "Weekly salary", class: "mdl-textfield__label" %>
+        <%= f.label "Weekly salary (€)", class: "mdl-textfield__label" %>
         <span class="mdl-textfield__error">Invalid salary.</span>
       </div>
     </div>
     <div class="form-group">
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
         <%= f.date_field :ends_at, value: (f.object.new_record? ? 90.days.from_now.strftime('%Y-%m-%d') : @contract.ends_at), class: "mdl-textfield__input" %>
-        <%= f.label :ends_at, class: "mdl-textfield__label" %>
+        <%= f.label "Contract end date", class: "mdl-textfield__label" %>
       </div>
     </div>
     <div class="form-group">
