--- a/app/views/shared/_player_game_week_table.html.erb
+++ b/app/views/shared/_player_game_week_table.html.erb
@@ -1,11 +1,8 @@
 <% current_season = Season.current.first %>
 
-<div class="mdl-card__title">
-	<h3 class="mdl-card__title-text">Stats</h3>
-</div>
 <div class="mdl-card__actions">
 	<div class="mdl-card__title">
-		<h4 class="mdl-card__title-text">Summary</h4>
+		<h4 class="mdl-card__title-text">Season Summary</h4>
 	</div>
 	<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
 		<tr>
