--- a/app/views/teams/_form.html.erb
+++ b/app/views/teams/_form.html.erb
@@ -19,7 +19,7 @@
   <div class="mdl-card__actions">
     <div class="form-group">
       <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-        <%= f.text_field :title, value: "#{Faker::Superhero.descriptor.titleize} #{Faker::Team.creature.titleize}", class: "mdl-textfield__input" %>
+        <%= f.text_field :title, value: "#{Faker::Superhero.descriptor.titleize} #{Faker::Team.creature.titleize} FC", class: "mdl-textfield__input" %>
         <%= f.label :title, "Team name", class: "mdl-textfield__label" %>
       </div>
     </div>
@@ -27,7 +27,7 @@
     <%= f.fields_for :stadium do |ff| %>
       <div class="form-group">
         <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-          <%= ff.text_field :name, value: "#{Faker::Address.street_name.titleize}", class: "mdl-textfield__input" %>
+          <%= ff.text_field :name, value: "The #{Faker::Address.street_name.titleize} Stadium", class: "mdl-textfield__input" %>
           <%= ff.label :name, "Stadium name", class: "mdl-textfield__label" %>
         </div>
       </div>
