--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -10,7 +10,7 @@
 	<% player_object = @player %>
 <% end %>
 
-<div class="col-sm-12">\
+<div class="col-sm-12">
 	<div class="mdl-card__title">
 		<h2 class="mdl-card__title-text">
 			<%= @player.full_name %>
